# nilearn-cli

./: .coveragerc  .gitignore  README.rst  pyproject.toml  setup.py
nilearn_cli/: connectome.py  region_extraction.py  surface_plot.py
