[metadata]
name = 'nilearn-cli'
version = '0.1.0'
description = ''
author = 'Daniel Gomez'
author_email = 'd.gomez@donders.ru.nl'
license = 'MIT/Apache-2.0'
url = 'https://github.com/dangom/nilearn-cli'

[requires]
python_version = ['3.5', '3.6', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
